# wedding

./: .gitignore  AGENTS.md  CLAUDE.md  PARKING_INFO.txt  README.md  dev-setup.sh  docker-compose.yml  sample_guest_list.csv
.claude/: settings.local.json
api/: .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh
api/.sqlx/: query-0e8cd68cd9bd26e4f4dbcce7b59292e40d93b28b09073b5811548ebf7a8ee087.json  query-5e480459caa69fb212282ce45924c2be92da17bc2e88189eae2477fd4c6ab85e.json  query-7c6900054bd2831457adf150c3af43e278157d8a88a292318b0c4be4571d0324.json  query-b8616a2477cda77bdac8463722d541d5cd6c34aa7372470f74203d72d67589c4.json  query-f81d8a8d514f6f8cb57df08b61ca8e50c8187d9a0704cef1dd133a34e44c59cd.json  query-f922d21946f5bc80ae9c51e1191f8adc1be70c040a023eb0b74bc972aa19ce75.json
api/migrations/: 001_initial_schema.sql  002_add_removed_field.sql  002_registry_enhancements.sql  003_add_contribution_fields.sql  003_invites_system.sql  004_rsvp_enhancements.sql  005_remove_moose_and_hide_names.sql  006_one_month_reminder_idempotency.sql
api/src/: db.rs  main.rs  models.rs  routes.rs
api/src/email/: mod.rs  templates.rs
frontend/: COLOR_GUIDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  rsbuild.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AdminAuth.tsx  ContributionModal.tsx  Countdown.tsx  ItemDetailModal.tsx  Layout.tsx
frontend/src/pages/: DetailsPage.tsx  FAQPage.tsx  HomePage.tsx  RSVPPage.tsx  RegistryPage.tsx  StoryPage.tsx  TravelPage.tsx  WeddingPartyPage.tsx
specs/: wedding_plan.md
(+12 files in other folders)
